Lovelace.java
/* Lovelace.java */
/* Generated By:JavaCC: Do not edit this line. Lovelace.java */
import java.io.*;
import java.util.ArrayList;
import ast.*;

public class Lovelace implements LovelaceConstants {

  public static void main(String args[]) throws ParseException,IOException {

        Lovelace analisador = new Lovelace(new FileInputStream(args[0]));
        Prog arvore = analisador.Lovelace();

  geraCodigo(arvore,args[0]);
  }

  public static void geraCodigo(Prog prog, String arquivo){
    try {
        // Define o nome do arquivo de saída (ex: teste.lov -> teste.c)
        String nomeSaida = arquivo.substring(0, arquivo.lastIndexOf('.')) + ".c";
        FileWriter fw = new FileWriter(nomeSaida);
        PrintWriter pw = new PrintWriter(fw);

        // 1. header padrão
        pw.println("#include <stdio.h>");
        pw.println("#include <stdbool.h>");
        pw.println();

        // 2. gera funções, se houver
        if (prog.fun != null) {
            for (Fun f : prog.fun) {
                gerarFuncao(f, pw);
            }
        }

        // 3. main
        pw.println("int main() {");

        // var do main
        for (VarDecl v : prog.main.vars) {
            pw.println("  " + mapTipo(v.type) + " " + v.var + ";");
        }

        // com do main
        for (Comando c : prog.main.coms) {
            gerarComando(c, pw, "  ");
        }

        pw.println("  return 0;");
        pw.println("}");

        pw.close();
        System.out.println("C\u00f3digo C gerado com sucesso em: " + nomeSaida);

    } catch (IOException e) {
        System.err.println("Erro ao gravar arquivo: " + e.getMessage());
    }
  }

  private static String mapTipo(String tipo) {
    if (tipo.equals("Float")) return "float";
    if (tipo.equals("Bool")) return "bool";
    return "void";
  }

private static void gerarComando(Comando c, PrintWriter pw, String indent) {
    if (c instanceof CAtribuicao) {
        CAtribuicao cat = (CAtribuicao) c;
        pw.println(indent + cat.var + " = " + gerarExp(cat.exp) + ";");
    } else if (c instanceof CPrint) {
        CPrint cp = (CPrint) c;

        pw.println(indent + "printf(\"%f\\n\", " + gerarExp(cp.exp) + ");");
    } else if (c instanceof CReadInput) {
        CReadInput cr = (CReadInput) c;
        pw.println(indent + "scanf(\"%f\", &" + cr.var + ");");
    } else if (c instanceof CReturn) {
        CReturn cret = (CReturn) c;
        pw.println(indent + "return " + gerarExp(cret.exp) + ";");
    }else if (c instanceof CIf) {
        CIf cif = (CIf) c;
        pw.println(indent + "if " + gerarExp(cif.exp) + " {");
        for (Comando subCom : cif.bloco) {
            gerarComando(subCom, pw, indent + "  ");
        }
        pw.println(indent + "}");
    }else if (c instanceof CWhile) {
        CWhile cw = (CWhile) c;
        pw.println(indent + "while " + gerarExp(cw.exp) + " {");
        for (Comando subCom : cw.bloco) {
            gerarComando(subCom, pw, indent + "  ");
        }
        pw.println(indent + "}");
    }
}

private static void gerarFuncao(Fun f, PrintWriter pw) {

    pw.print(mapTipo(f.retorno) + " " + f.nome + "(");

    if (f.params != null && !f.params.isEmpty()) {
        for (int i = 0; i < f.params.size(); i++) {
            ParamFormalFun p = f.params.get(i);
            pw.print(mapTipo(p.type) + " " + p.var);
            if (i < f.params.size() - 1) pw.print(", ");
        }
    } else {
        pw.print("void");
    }
    pw.println(") {");

    if (f.vars != null) {
        for (VarDecl v : f.vars) {
            pw.println("  " + mapTipo(v.type) + " " + v.var + ";");
        }
    }

    for (Comando c : f.body) {
        gerarComando(c, pw, "  ");
    }
    pw.println("}\n");
}

private static String gerarExp(Exp e) {
    if (e instanceof EFloat) {
        return String.valueOf(((EFloat) e).value);
    } else if (e instanceof EVar) {
        return ((EVar) e).var;
    } else if (e instanceof ETrue) {
        return "true";
    } else if (e instanceof EFalse) {
        return "false";
    } else if (e instanceof EOpExp) {
        EOpExp opEx = (EOpExp) e;
        return "(" + gerarExp(opEx.arg1) + " " + opEx.op + " " + gerarExp(opEx.arg2) + ")";
    } else if (e instanceof EChamadaFun) {
        EChamadaFun cf = (EChamadaFun) e;
        String args = "";
        if (cf.args != null) {
            for (int i = 0; i < cf.args.size(); i++) {
                args += gerarExp(cf.args.get(i));
                if (i < cf.args.size() - 1) args += ", ";
            }
        }
        return cf.fun + "(" + args + ")";
    }
    return "";
}

  static final public Prog Lovelace() throws ParseException {Main main = null; ArrayList<Fun> fun= null;
    main = Main();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DEF:{
      fun = Func();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
{if ("" != null) return new Prog(main,fun);}
    throw new Error("Missing return statement in function");
}

  static final public Main Main() throws ParseException {ArrayList<VarDecl> vars = null; ArrayList<Comando> coms = null;
    jj_consume_token(MAIN);
    jj_consume_token(APAR);
    jj_consume_token(FPAR);
    jj_consume_token(BEGIN);
    vars = VarDecl();
    coms = SeqComandos();
    jj_consume_token(END);
{if ("" != null) return new Main(vars,coms);}
    throw new Error("Missing return statement in function");
}

  static final public ArrayList<Fun> Func() throws ParseException {ArrayList<Fun> lista = new ArrayList<Fun>();
  String t;
  Token id;
  ArrayList<ParamFormalFun> p = new ArrayList<ParamFormalFun>();
  ArrayList<VarDecl> v;
  ArrayList<Comando> c;
    label_1:
    while (true) {
      jj_consume_token(DEF);
      t = Tipo();
      id = jj_consume_token(ID);
      jj_consume_token(APAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FLOAT:
      case BOOL:
      case VOID:{
        p = ListaArg();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      jj_consume_token(FPAR);
      jj_consume_token(BEGIN);
      v = VarDecl();
      c = SeqComandos();
      jj_consume_token(END);
lista.add(new Fun(id.image, p, t, v, c));
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DEF:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
    }
{if ("" != null) return lista;}
    throw new Error("Missing return statement in function");
}

  static final public String Tipo() throws ParseException {Token t=null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FLOAT:{
      t = jj_consume_token(FLOAT);
{if ("" != null) return t.image;}
      break;
      }
    case BOOL:{
      t = jj_consume_token(BOOL);
{if ("" != null) return t.image;}
      break;
      }
    case VOID:{
      t = jj_consume_token(VOID);
{if ("" != null) return t.image;}
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public ArrayList<VarDecl> VarDecl() throws ParseException {ArrayList<VarDecl> vardecls = new ArrayList<VarDecl>(); String type=null; Token id=null;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LET:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(LET);
      type = Tipo();
      id = jj_consume_token(ID);
      jj_consume_token(PV);
vardecls.add(new VarDecl(type, id.image));
    }
{if ("" != null) return vardecls;}
    throw new Error("Missing return statement in function");
}

// Ok
  static final public ArrayList<Comando> SeqComandos() throws ParseException {ArrayList<Comando> coms = new ArrayList<Comando>(); Comando c=null;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case RETURN:
      case PRINT:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      c = Comando();
coms.add(c);
    }
{if ("" != null) return coms;}
    throw new Error("Missing return statement in function");
}

  static final public Comando Comando() throws ParseException {Token id;
  Exp e;
  ArrayList<Exp> args = null;
  ArrayList<Comando> bloco;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      id = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ATRIB:{
        jj_consume_token(ATRIB);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case READ:{
          jj_consume_token(READ);
          jj_consume_token(APAR);
          jj_consume_token(FPAR);
          jj_consume_token(PV);
{if ("" != null) return new CReadInput(id.beginLine, id.image);}
          break;
          }
        case APAR:
        case TRUE:
        case FALSE:
        case ID:
        case NUMLITERAL:{
          e = Exp();
          jj_consume_token(PV);
{if ("" != null) return new CAtribuicao(id.beginLine, id.image, e);}
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      case APAR:{
        jj_consume_token(APAR);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case APAR:
        case TRUE:
        case FALSE:
        case ID:
        case NUMLITERAL:{
          args = ListaExp();
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        jj_consume_token(FPAR);
        jj_consume_token(PV);
{if ("" != null) return new CChamadaFun(id.beginLine, id.image, args);}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    case IF:{
      jj_consume_token(IF);
      e = Exp();
      jj_consume_token(BEGIN);
      bloco = SeqComandos();
      jj_consume_token(END);
      jj_consume_token(PV);
{if ("" != null) return new CIf(0, e, bloco);}
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      e = Exp();
      jj_consume_token(BEGIN);
      bloco = SeqComandos();
      jj_consume_token(END);
      jj_consume_token(PV);
{if ("" != null) return new CWhile(0, e, bloco);}
      break;
      }
    case RETURN:{
      jj_consume_token(RETURN);
      e = Exp();
      jj_consume_token(PV);
{if ("" != null) return new CReturn(0, e);}
      break;
      }
    case PRINT:{
      jj_consume_token(PRINT);
      e = Exp();
      jj_consume_token(PV);
{if ("" != null) return new CPrint(0, e);}
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Exp Exp() throws ParseException {Exp e1, e2; String op;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case APAR:{
      jj_consume_token(APAR);
      e1 = Exp();
      op = Op();
      e2 = Exp();
      jj_consume_token(FPAR);
{if ("" != null) return new EOpExp(op, e1, e2);}
      break;
      }
    case TRUE:
    case FALSE:
    case ID:
    case NUMLITERAL:{
      e1 = Fator();
{if ("" != null) return e1;}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public String Op() throws ParseException {Token t=null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MAIS:{
      t = jj_consume_token(MAIS);
{if ("" != null) return t.image;}
      break;
      }
    case MENOS:{
      t = jj_consume_token(MENOS);
{if ("" != null) return t.image;}
      break;
      }
    case ASTER:{
      t = jj_consume_token(ASTER);
{if ("" != null) return t.image;}
      break;
      }
    case BARRA:{
      t = jj_consume_token(BARRA);
{if ("" != null) return t.image;}
      break;
      }
    case AND:{
      t = jj_consume_token(AND);
{if ("" != null) return t.image;}
      break;
      }
    case OR:{
      t = jj_consume_token(OR);
{if ("" != null) return t.image;}
      break;
      }
    case MENOR:{
      t = jj_consume_token(MENOR);
{if ("" != null) return t.image;}
      break;
      }
    case MAIOR:{
      t = jj_consume_token(MAIOR);
{if ("" != null) return t.image;}
      break;
      }
    case IGUAL:{
      t = jj_consume_token(IGUAL);
{if ("" != null) return t.image;}
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Exp Fator() throws ParseException {Token t; ArrayList<Exp> args = null; Exp e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case APAR:{
        jj_consume_token(APAR);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case APAR:
        case TRUE:
        case FALSE:
        case ID:
        case NUMLITERAL:{
          args = ListaExp();
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          ;
        }
        jj_consume_token(FPAR);
{if ("" != null) return new EChamadaFun(t.image, args);}
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        ;
      }
{if ("" != null) return new EVar(t.image);}
      break;
      }
    case NUMLITERAL:{
      t = jj_consume_token(NUMLITERAL);
{if ("" != null) return new EFloat(Float.parseFloat(t.image));}
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
{if ("" != null) return new ETrue();}
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
{if ("" != null) return new EFalse();}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

// Ok
  static final public ArrayList<Exp> ListaExp() throws ParseException {ArrayList<Exp> listExp = new ArrayList<Exp>(); Exp e=null;
    e = Exp();
listExp.add(e);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_4;
      }
      jj_consume_token(VIRGULA);
      Exp();
listExp.add(e);
    }
{if ("" != null) return listExp;}
    throw new Error("Missing return statement in function");
}

//Ok
// ParamFormalFun
  static final public ArrayList<ParamFormalFun> ListaArg() throws ParseException {ArrayList<ParamFormalFun> params = new ArrayList<ParamFormalFun>(); String t; Token id;
    t = Tipo();
    id = jj_consume_token(ID);
params.add(new ParamFormalFun(id.image, t));
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VIRGULA:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
      jj_consume_token(VIRGULA);
      t = Tipo();
      id = jj_consume_token(ID);
params.add(new ParamFormalFun(id.image, t));
    }
{if ("" != null) return params;}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public LovelaceTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[17];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x800000,0x7000,0x800000,0x7000,0x40,0xf0000,0x1300080,0x300080,0x8080,0xf0000,0x300080,0xfe000000,0x300080,0x80,0x300000,0x400000,0x400000,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x4,0xc,0xc,0x0,0x4,0xc,0x3,0xc,0x0,0xc,0x0,0x0,};
	}

  /** Constructor with InputStream. */
  public Lovelace(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Lovelace(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new LovelaceTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Lovelace(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new LovelaceTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new LovelaceTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Lovelace(LovelaceTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(LovelaceTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 17; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[36];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 17; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 36; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
